src/style/home.scss
.home-wrapper {
    width: calc(100vw - 50px);
    min-height: calc(100vh - 10px);
    min-height: calc((var(--vh, 1vh) * 100) - 10px);
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 0px 20px;
    background-color: lightgreen;
    border: 5px solid green;

    h2 {
        margin-bottom: 0px;
    }

    img {
        height: 50px;
        width: 50px;
        margin-bottom: 5px;
    }
    input {
        width: 120px;
        text-align: center;
        border: none;
        border-radius: 3px;
        box-shadow: 0px 1.5px 5px .5px rgba(0,0,0,0.25);
        font-family: 'Chelsea Market', cursive;
        transition: .2s;

        &:focus {
            outline: none;
            box-shadow: 0px 1.5px 5px .5px rgba(0,0,0,0.5);
        }
    }

    button {
        width: 122px;
        text-align: center;
        border-radius: 5px;
        border-color: green;
        background-color: white;
        font-family: 'Chelsea Market', cursive;
    }

    .instructions-wrapper {
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .choice-wrapper {
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;

        h6 {
            margin: 5px;
        }

        .error {
            margin-bottom: 5px;
        }
    }
}

@media(max-width: 480px) {
    .home-wrapper {
        justify-content: space-between;

        input {
            width: 75vw;
            height: 28px;
        }

        button {
            width: calc(75vw + 2px);
            height: 30px;
        }

        .choice-wrapper {
            height: 50vh;
            height: calc((var(--vh, 1vh) * 50));

            h6 {
                margin: 20px;
            }

            .error {
                margin-bottom: 10px;
            }
        }
    }
}

